--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -104,7 +104,7 @@ link: dwarf-planet
                             <th>Máni</th><th>796</th><th>Nearly certainly</th><th>no</th><th> - </th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>2018 AG37</th><th>790</th><th> - </th><th>no</th><th> - </th><th>centaur and <a href="tno.html">TNO</a></th>
+                            <th>2018 AG37</th><th>790</th><th> - </th><th>no</th><th> - </th><th><a href="centaur.html">centaur</a> and <a href="tno.html">TNO</a></th>
                         </tr>
                         <tr>
                             <th>Aya</th><th>768</th><th>Highly likely</th><th>no</th><th> - </th><th>classical</th>
