--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -181,6 +181,7 @@ link: jupiter
                     Metis and Adrastea maintain Jupiter's main ring, whereas Amalthea and Thebe maintain their own faint outer rings.
                 </p>
                 <h2 class="paragraphheader" id="Trojans">Trojans</h2>
+                <p class="readmore">Main article: <a href="trojan.html">Trojans</a></p>
                 <p class="paragraph">
                     A large group of <a href="asteroid.html">asteroids</a> co-orbits with Jupiter, named trojans.
                     These asteroids are divided in two groups - the Greek camp, lying around the leading Lagrange point (L4), and the Trojan camp, lying around the trailing Lagrange point (L5).
