--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -141,7 +141,7 @@ link: natural-satellite
                     </div>
                 </div>
                 <p class="paragraph">
-                    The biggest irregularly-shaped satellite is Hyperion and Phoebe is the most massive. 
+                    The biggest irregularly-shaped satellite is <a href="hyperion.html">Hyperion</a> and Phoebe is the most massive. 
                     Satellites like Atlas, Pan and Daphnis are called shepherd moons.
                     They have distinct equatorial ridges formed from clearing Saturn's rings.
                 </p>
@@ -183,7 +183,7 @@ link: natural-satellite
                         The biggest satellite - <a href="triton.html">Triton</a>, is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune.
                     </p>
                     <p class="paragraph">
-                        The biggest non-planetary satellite in the Solar System is Proteus, which orbits Neptune.
+                        The biggest non-planetary satellite in the Solar System is <a href="proteus.html">Proteus</a>, which orbits Neptune.
                     </p>
                 </div>
                 <div class="articlediv">
