--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -141,7 +141,7 @@ link: neptune
                         All of the other satellites have an irregular shape.
                         The second discovered moon, Nereid, is an irregular moon with a high 0.7512 eccentricity and a apoapsis seven times the periapsis.
                         More moons were discovered by Voyager 2.
-                        The biggest of them is Proteus, whis is the biggest we know of with an irregular shape, larger than Saturn's <a href="mimas.html">Mimas</a>, which is round.
+                        The biggest of them is <a href="proteus.html">Proteus</a>, whis is the biggest we know of with an irregular shape, larger than Saturn's <a href="mimas.html">Mimas</a>, which is round.
                         Naiad, Thalassa, Despina and Galatea are within the rings of Neptune.
                         Larissa was the last discovered in 1989.
                         Since then eight more moons were discovered in 2002, 2003, 2013 and 2021.
