--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -114,7 +114,7 @@ link: saturn
                     Other round moons are <a href="rhea.html">Rhea</a>, <a href="iapetus.html">Iapetus</a>, <a href="dione.html">Dione</a>, <a href="tethys.html">Tethys</a>, <a href="enceladus.html">Enceladus</a>, and <a href="mimas.html">Mimas</a>.
                 </p>
                 <p class="paragraph">
-                    Out of the irregularly-shaped satellite, Hyperion is the largest. 
+                    Out of the irregularly-shaped satellite, <a href="hyperion.html">Hyperion</a> is the largest. 
                     There are satellites like Pan and Daphnis that are refered to as shepherd moons.
                     They have distinct equatorial ridges formed from clearing Saturn's rings.
                 </p>
@@ -170,7 +170,7 @@ link: saturn
                     <p class="paragraph">
                         Dione is the fourth biggest Saturnian moon.
                         Similar to Rhea, Dione is heavily cratered, but features more chasmata and fossae (ridges).
-                        Dione has two trojans, which are also moons of Saturn - Helene and Polydeuces.
+                        Dione has two <a href="trojan.html">trojans</a>, which are also moons of Saturn - Helene and Polydeuces.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -210,9 +210,9 @@ link: saturn
                     <p class="readmore">Main article: <a href="mimas.html">Mimas</a></p>
                     <p class="paragraph">
                         Mimas is the smallest of the seven gravitationally-rounded moons of Saturn.
-                        It is smaller than the irregularly-shaped moon of <a href="neptune.html">Neptune</a> Proteus.
+                        It is smaller than the irregularly-shaped moon of <a href="neptune.html">Neptune</a> <a href="proteus.html">Proteus</a>.
                         A distinctive feature is the crater Herschel, named after the discoverer of Mimas.
-                        The moon resembles the fictional Death Star in Star Wars.
+                        Because of it, the moon resembles the fictional Death Star in Star Wars.
                     </p>
                 </div>
                 <h3 class="paragraphsubheader" id="OtherRegularMoons">Other regular moons</h3>
