--- a/pages/solar-system.html
+++ b/pages/solar-system.html
@@ -6,22 +6,169 @@ link: solar-system
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:242px">
-                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="240" height="240">
-                        <p class="caption">The <a href="sun.html">Sun</a> is the star of the Solar System.</p>
-                    </div>
                     <p class="paragraph">
                         The Solar System is the planetary system of the <a href="sun.html">Sun</a>. 
                         It formed about 4.6 billion years ago with the collapse of a dense region of a molecular cloud, which created the Sun and a protoplanetary disc that eventually formed the orbiting bodies. 
                         The system features eight known <a href="planet.html">planets</a> that orbit the Sun. 
                         The closest four ones - <a href="mercury.html">Mercury</a>, <a href="venus.html">Venus</a>, <a href="earth.html">Earth</a>, and <a href="mars.html">Mars</a> - are smaller in size and consist mostly of solid materials like rocks and metals, while the outer four - <a href="jupiter.html">Jupiter</a>, <a href="saturn.html">Saturn</a>, <a href="uranus.html">Uranus</a>, and <a href="neptune.html">Neptune</a> - are much bigger in size and are mostly made of hydrogen, helium, or include other compounds that are refered to as volatiles.
-                        Apart from planets, the Solar System includes many smaller bodies like <a href="natural-satellite.html">natural satellites</a>, <a href="asteroid.html">asteroids</a>, <a href="comet.html">comets</a>, centaurs and meteoroids.
+                        Apart from planets, the Solar System includes many smaller bodies like <a href="natural-satellite.html">natural satellites</a>, <a href="asteroid.html">asteroids</a>, <a href="comet.html">comets</a>, <a href="centaur.html">centaurs</a> and meteoroids.
                     </p>
                 </div>
-                <!--<h2 class="paragraphheader" id="Formation">Formation</h2>
+                <h2 class="paragraphheader" id="Formation">Formation</h2>
                 <p class="paragraph">
-                </p>-->
-                <h2 id="ExternalLinks">External links</h4>
+                    The Solar System formed approximately 4.6 billion years ago from a giant, rotating cloud of gas and dust known as the solar nebula.
+                    According to the most widely accepted theory, this cloud began to collapse under its own gravity, possibly triggered by the shockwave from a nearby supernova.
+                    As the nebula collapsed, it spun faster and flattened into a rotating disk called a protoplanetary disk.
+                    At the center, gravity pulled more and more material together into a protostar that would become the Sun, which accounts for over 99% of the Solar System’s mass.
+                    The remaining material in the disk started to accrete, forming planetesimals - small bodies that would eventually grow into planets.
+                    Closer to the Sun, where temperatures were higher, only rocky materials and metals could solidify, leading to the formation of the inner, terrestrial planets: Mercury, Venus, Earth, and Mars.
+                    Further out, where it was colder, icy and gaseous materials could also condense, giving rise to the gas giants (Jupiter and Saturn) and the ice giants (Uranus and Neptune).
+                    Leftover debris that didn’t become part of planets formed minor planets and comets.
+                    With time, the protostar Sun achieved hydrostatic equilibrium and began thermonuclear fusion.
+                </p>
+                <p class="paragraph">
+                    In 5 billion years, the Sun will enter its red giant phase after turning all of its hydrogen into helium.
+                    It will destroy Mercury, venus, and possibly Earth, and the habitable zone will move all the way to the orbit of Jupiter.
+                    Eventually it will use up all of the helium and won't be able to commense the fusion of heavier elements and will send its outer layer into space forming a planetary nebula and leaving a dense white dwarf.
+                </p>
+                <h2 class="paragraphheader" id="Regions">Regions</h2>
+                <p class="paragraph">
+                    The Solar System can be divided into several regions based on common features of the most dominant orbiting bodies.
+                </p>
+                <div class="articlediv">
+                <h3 class="paragraphheader" id="Sun">Sun</h3>
+                    <div class="captionbox right" style="width:182px">
+                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="180" height="180">
+                        <p class="caption">The Sun is the star of the Solar System</p>
+                    </div>
+                    <p class="readmore">Main article: <a href="sun.html">Sun</a></p>
+                    <p class="paragraph">
+                        The Sun is the sole star of the Solar System, primarily composed of hydrogen and helium plasma.
+                        It is a G-type main-sequence star and accounts for 99.86% of the total mass of the Solar System.
+                        It generates energy through nuclear fusion in its core, where hydrogen atoms fuse to form helium, releasing vast amounts of light and heat.
+                        The Sun’s immense gravity keeps all the planets, dwarf planets, comets, and other objects in orbit around it.
+                        Its magnetic field and solar wind - a stream of charged particles - extend far beyond the planets, shaping the heliosphere and influencing space weather throughout the Solar System.
+                    </p>
+                </div>
+                <div class="articlediv">
+                    <h3 class="paragraphheader" id="InnerPlanets">Inner planets</h3>
+                    <p class="paragraph">
+                        The inner planets, also known as terrestrial planets, are Mercury, Venus, Earth, and Mars.
+                        The Sun's habitable zone extends from the orbit of Venus to that of Mars.
+                        These worlds are characterized by their solid, rocky surfaces and relatively small sizes compared to the outer planets.
+                        Mercury, the closest to the Sun, is a barren, cratered world with extreme temperature variations.
+                        Venus, similar in size to Earth, has a thick, toxic atmosphere rich in carbon dioxide, creating a runaway greenhouse effect that makes it the hottest planet in the Solar System.
+                        Earth is the only known planet to support life, with liquid water, a breathable atmosphere, and a diverse biosphere.
+                        Mars, the “Red Planet,” is cold and dry, with evidence of past water activity.
+                    </p>
+                    <div class="imgwrapper">
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/planets/mercury.jpg" alt="Mercury" width="180" height="180">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/planets/venus.jpg" alt="Venus" width="180" height="180">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/planets/earth.jpg" alt="Earth" width="180" height="180">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars" width="180" height="180">
+                        </div>
+                        <p class="caption">Mercury, Venus, Earth, Mars</p>
+                    </div>
+                    <p class="paragraph">
+                        There are only three natural satellites orbiting these planets - the <a href="moon.html">Moon</a>, which orbits the Earth, and <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>, which orbit Mars.
+                        Other bodies that orbit the Sun around the terrestial planets are numerous asteroid populations, including Near-Earth asteroids.
+                    </p>
+                </div>
+                <div class="articlediv">
+                    <div class="captionbox right" style="width:182px">
+                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="180" height="180">
+                        <p class="caption">Ceres is the largest asteroid</p>
+                    </div>
+                    <h3 class="paragraphheader" id="AsteroidBelt">Asteroid belt</h3>
+                    <p class="readmore">Main article: <a href="asteroid-belt.html">Asteroid belt</a></p>
+                    <p class="paragraph">
+                        The asteroid belt is a region located between the orbits of Mars and Jupiter filled with millions of rocky bodies called asteroids.
+                        These range in size from Ceres, the largest asteroid and a dwarf planet, to small rocks.
+                        Other large asteroids include Vesta, Pallas, and Hygiea.
+                        The belt is thought to be a remnant of the early Solar System, where the gravitational influence of Jupiter prevented the formation of a planet.
+                        The asteroids are spread out over a vast area, with hundreds of thousands of kilometers separating most of them.
+                    </p>
+                </div>
+                <div class="articlediv">
+                    <h3 class="paragraphheader" id="OuterPlanets">Outer planets</h3>
+                    <p class="paragraph">
+                        Beyond the asteroid belt lie the outer four planets: Jupiter, Saturn, Uranus, and Neptune.
+                        The former two are gas giants, while the latter two are ice giants (Uranus and Neptune), all characterized by their massive sizes, thick atmospheres, ring systems and numerous moons.
+                        Jupiter, the largest planet, is recognised for its Great Red Spot and has a strong magnetic field.
+                        Saturn is famous for its higly visible ring system, made of ice and rock particles.
+                        Uranus and Neptune are much colder and windier, with blue hues due to methane in their atmospheres.
+                        Many unique planet-like satellites orbit these planets - Titan has a thick atmosphere and liquid methane features, Io is highly geologically active and hosts hundreds of volcanoes, and Europa and Enceladus are icy worlds with subsurface oceans and young surfaces affected by their active geology.
+                        There are also other major groups that orbit near the outer planets - Hilda asteroids around Jupiter, the <a href="trojan.html">trojans</a> of Jupiter, and centaurs.
+                    </p>
+                    <div class="imgwrapper">
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/planets/jupiter.jpg" alt="Jupiter" width="180" height="180">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn" width="320" height="164">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/planets/uranus.jpg" alt="Uranus" width="180" height="180">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/planets/neptune.jpg" alt="Neptune" width="180" height="180">
+                        </div>
+                        <p class="caption">Jupiter, Saturn, Uranus, Neptune</p>
+                    </div>
+                </div>
+                <div class="articlediv">
+                    <div class="captionbox right" style="width:182px">
+                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto" width="180" height="180">
+                        <p class="caption">Pluto is the largest trans-Neptunian object</p>
+                    </div>
+                    <h3 class="paragraphheader" id="TransNeptunianRegions">Trans Neptunian regions</h3>
+                    <p class="readmore">Main article: <a href="tno.html">Trans-Neptunian object</a></p>
+                    <p class="paragraph">
+                        Beyond Neptune’s orbit lie numerous bodies known as trans-Neptunian objects.
+                        The Kuiper Belt comprises the most known TNOs, including Pluto, Haumea, and Makemake.
+                        Other regions incluse the scattered disc - TNOs with greater inclination than those of the Kuiper belt - and extreme TNOS, which have very distant and highly eccentric orbits.
+                        The biggest members of these two groups are Eris and Sedna respectively.
+                    </p>
+                    <p class="paragraph">
+                        These trans-Neptunian objects are remnants from the early Solar System and are composed mostly of frozen volatiles like water, ammonia, and methane.
+                        Pluto, once considered the ninth planet, is now classified as a dwarf planet and is the largest of the TNOS.
+                    </p>
+                <h3 class="paragraphheader" id="HeliosphereAndOortCloud">Heliosphere and Oort cloud</h3>
+                </div>
+                <p class="paragraph">
+                    Far from the Kuiper belt lies the heliopause, which is the greatest extent of the so-called heliosphere.
+                    This is the greatest extend of the solar magnetosphere and solar winds.
+                    Beyond the heliopause lies interstellar space.
+                    Two spacecrafts are known to have left the heliosphere - Voyager 1 and 2 - and three others are on their way - Pioneer 10 and 11, and New Horizons.
+                    Contact with the Pioneer spacecrafts has been lost, so the exact moment they cross the heliopause will be uncertain.
+                </p>
+                <p class="paragraph">
+                    The Oort cloud is a theoretical spherical shell of icy objects believed to surround the Solar System at distances up to 100,000 astronomical units (AU).
+                    The Oort cloud is thought to be the source of long-period comets, which occasionally enter the inner Solar System after gravitational perturbations.
+                    While not inside the Solar System, the Oort cloud has its origin in the creation of the planets, but were sent into much more distant orbits. 
+                </p>
+                <div class="articlediv">
+                    <div class="captionbox right" style="width:332px">
+                        <img class="articleimage" src="../assets/images/other/halley-1986.jpg" alt="Halley comet in 1986" width="330" height="222">
+                        <p class="caption">The Halley comet seen from Earth in 1986.</p>
+                    </div>
+                    <h3 class="paragraphheader" id="Comets">Comets</h3>
+                    <p class="readmore">Main article: <a href="comet.html">Comet</a></p>
+                    <p class="paragraph">
+                        Comets are icy bodies that originate from the outer reaches of the Solar System and begin to release gases when approaching their perihelion.
+                        These vapors form a glowing coma and often a tail that can stretch millions of kilometers.
+                        They are composed of ice, dust, and organic compounds.
+                        Famous comets like Halley’s Comet and Comet Hale-Bopp have captivated human imagination for centuries, since they can be seen from Earth.
+                    </p>
+                </div>
+                <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
                         <a href="https://en.wikipedia.org/wiki/Solar_System">https://en.wikipedia.org/wiki/Solar_System</a>
