--- a/pages/venus.html
+++ b/pages/venus.html
@@ -62,7 +62,7 @@ link: venus
                 </p>
                 <p class="paragraph">
                     There are no natural satellites orbiting Venus.
-                    There are however seven trojans co-orbiting with Venus.
+                    There are however seven <a href="trojan.html">trojans</a> co-orbiting with Venus.
                 </p>
                 <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
                 <h3 class="paragraphsubheader" id="Size">Size</h3>
