--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -8,7 +8,7 @@ link: asteroid-belt
                 <p class="paragraph">
                     The asteroid belt is a region in the <a href="solar-system.html">Solar System</a>, located roughly between the orbits of the <a href="planet.html">planets</a> <a href="jupiter.html">Jupiter</a> and <a href="mars.html">Mars</a>. 
                     It contains many irregularly shaped bodies called <a href="asteroid.html">asteroids</a> or minor planets. 
-                    This asteroid belt is also known as the main asteroid belt to distinguish it from other asteroid populations such as near-Earth asteroids and trojan asteroids.</p>
+                    This asteroid belt is also known as the main asteroid belt to distinguish it from other asteroid populations such as near-Earth asteroids and <a href="trojan.html">trojan</a> asteroids.</p>
                 <h2 class="paragraphheader" id="DiscoveryOfTheAsteroidBelt">Discovery of the asteroid belt</h2>
                 <p class="paragraph">
                     In 1596, Johannes Kepler assumed that there must be a planet between Mars and Jupiter, due to the gap between the planets. 
