Ceres, Titan, Enceladus, Triton; updated Mercury

--- a/pages/io.html
+++ b/pages/io.html
@@ -78,7 +78,7 @@ link: io
                         <img class="articleimage" src="../assets/images/features/pele.jpg" alt="Pele" width="240" height="240">
                         <p class="caption">Io and the volcano Pele with its reddish ring</p>
                     </div>
-                    <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
+                    <h3 class="paragraphsubheader" id="Surface">Surface</h3>
                     <p class="paragraph">
                         Io's surface is shaped by its dynamic and ever-changing surface, which is the result of its intense volcanic activity.
                         The surface is covered with a variety of volcanic features, including lava flows, volcanic calderas, and extensive plains of sulfur and sulfur dioxide.
@@ -102,7 +102,7 @@ link: io
                         <img class="articleimage" src="../assets/images/other/tvashtar-eruption.gif" alt="Tvashtar eruption" width="180" height="180">
                         <p class="caption">Timelapse of Tvashtar Patera erupting, seen from New Horizon</p>
                     </div>
-                    <h2 class="paragraphheader" id="VolcanicActivity">Volcanic Activity</h2>
+                    <h3 class="paragraphheader" id="VolcanicActivity">Volcanic Activity</h3>
                     <p class="paragraph">
                         Io is the most volcanically active body in the solar system, with hundreds of volcanoes and volcanic features scattered across its surface.
                         The volcanic activity is driven by the intense tidal heating caused by Jupiter's gravitational pull and the orbital resonances with Europa and Ganymede.
