--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -18,13 +18,13 @@ link: jupiter
                     <p class="paragraph">
                         The most recognisable feature is the massive Great Red Spot - a long-lasting storm in the atmosphere of Jupiter. 
                         It has a faint ring and at least <a href="satellites-of-jupiter.html">97 moons</a>.
-                        The four main ones are Ganymede, Callisto, Io, and Europe, first discoverd by Galileo in 1610. 
+                        The four main ones are <a href="ganymede.html">Ganymede</a>, <a href="callisto.html">Callisto</a>, <a href="io.html">Io</a>, and <a href="europa.html">Europa</a>, first discoverd by Galileo in 1610. 
                     </p>
                     <p class="paragraph">
                         Multiple spacecrafts have visited Jupiter, two of which have orbited around it.
                         Pioneer 10 and 11, Voyager 1 and 2 and New Horizons used Jupiter's gravity for accelerating beyond it's orbits to achieve the velocity required to leave the Solar System.
                         Juno is an ongoing mission, studying the atmosphere, deep structure and magnetosphere.
-                        ESA's JUICE and NASA's Europa Clipper are on their way to Jupiter and its satellites Ganymede, Callisto and Europa.
+                        ESA's JUICE and NASA's Europa Clipper are on their way to Jupiter and its <a href="natural-satellite.html">satellites</a> Ganymede, Callisto and Europa.
                         A future mission is CNSA's Tianwen-4, which is planned to launch in 2035.
                     </p>
                 </div>
