--- a/pages/pluto.html
+++ b/pages/pluto.html
@@ -86,7 +86,7 @@ link: pluto
                 </p>
                 <p class="paragraph">
                 </p>
-                <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
+                <h3 class="paragraphsubheader" id="Surface">Surface</h3>
                 <p class="paragraph">
                     Pluto is covered by 98% nitrogen ice and trace amounts of methane, water ice, and carbon monoxide.
                     The surface is remarkably diverse and complex, with a variety of terrains shaped by different geological processes.
