--- a/pages/sun.html
+++ b/pages/sun.html
@@ -13,16 +13,23 @@ link: sun
                     <p class="paragraph">
                         The Sun is the <a href="star.html">star</a> of the Solar System.
                         It is a G-type yellow dwarf and has 8 known <a href="planet.html">planets</a> orbiting around it.
-                        The Sun is 4.5 billion years old and is expected to last 5 billion more years as a main sequence star, before it becimes a red giant.
+                        The Sun is 4.5 billion years old and is expected to last 5 billion more years as a main sequence star, before it becomes a red giant.
                     </p>
                     <p class="paragraph">
                         The Sun is vital for life on <a href="earth.html">Earth</a> and has been seen as a deity.
                         Solar calendars are based on the Earth's rotation around the Sun.
                     </p>
                 </div>
-                <!--<h2 class="paragraphheader" id="Formation">Formation</h2>
+                <h2 class="paragraphheader" id="Formation">Formation</h2>
                 <p class="paragraph">
-                </p>-->
+                    At the center of the solar nebula that formed the <a href="solar-system.html">Solar System</a> 4,6 billion years ago, gravity pulled more and more material together into a protostar that would become the Sun.
+                    With time, the protostar Sun achieved hydrostatic equilibrium and began thermonuclear fusion, becoming a main-sequence star.
+                </p>
+                <p class="paragraph">
+                    In 5 billion years, the Sun will enter its red giant phase after turning all of its hydrogen into helium.
+                    It will destroy Mercury, venus, and possibly Earth, and the habitable zone will move all the way to the orbit of Jupiter.
+                    Eventually it will use up all of the helium and won't be able to commense the fusion of heavier elements and will send its outer layer into space forming a planetary nebula and leaving a dense white dwarf.
+                </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
