--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -43,12 +43,14 @@ link: uranus
                 <p class="paragraph">
                     Uranus was observed before it was proven to be a planet.
                     The earliest definite record is in 1690, when the english astronomer John Flamsteed catalogued it as 34 Tauri.
+                    Johann Daniel Titius and later Johann Elert Bode in 1772 derived the Titius-Bode law, which was an attempt to predict the location of new planets, most notably one in the gap between <a href="mars.html">Mars</a> and Jupiter.
                     In 1781 sir William Herschel looked through a telescope, discovering the object.
-                    He originally mistook it for a <a href="comet.html">Miranda</a>comet</a>, but based on his findings, other astronomers identified it as a planet.
+                    He originally mistook it for a <a href="comet.html">comet</a>, but based on his findings, other astronomers identified it as a new planet, proving for a time the Titius-Bode law.
+                    This was mostly a coincidence, since the mystery planet between Mars and Jupiter turned out to be an entire region of many small bodies, collectively called the <a href="asteroid-belt.html">asteroid belt</a>, and Neptune, which was discovered afterwards, deviated from the expected position.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:262px;">
-                        <img class="articleimage" src="../assets/images/other/uranus-tilt.jpg" alt="Uranus axial tilt" width="260" height="383">
+                    <div class="captionbox right" style="width:197px;">
+                        <img class="articleimage" src="../assets/images/other/uranus-tilt.jpg" alt="Uranus axial tilt" width="195" height="287.25">
                         <p class="caption">Uranus and its rings, the axial tilt is almost parallel to the ecliptic, Hubble Space Telescope</p>
                     </div>
                     <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
@@ -63,13 +65,13 @@ link: uranus
                         The eccentricity is 0.047.
                         Early observations of Uranus lead to the discovery of a planet that influenced the Uranian orbit - <a href="neptune.html">Neptune</a>.
                     </p>
+                    <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+                    <h3 class="paragraphsubheader" id="Size">Size</h3>
+                    <p class="paragraph">
+                        Uranus has a radius of 25,362 km, four times that of <a href="earth.html">Earth</a>.
+                        Uranus is slightly larger than Neptune, but less massive.
+                    </p>
                 </div>
-                <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
-                <h3 class="paragraphsubheader" id="Size">Size</h3>
-                <p class="paragraph">
-                    Uranus has a radius of 25,362 km, four times that of <a href="earth.html">Earth</a>.
-                    Uranus is slightly larger than Neptune, but less massive.
-                </p>
                 <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
                 <p class="paragraph">
                     The standard model of the Uranian structure is that it consists of three layers: a silicate/metallic core, an icy (water, ammonia and methane) mantle and an outer gaseous hydrogen/helium atmosphere.
@@ -79,23 +81,23 @@ link: uranus
                     Due to the high pressure and temperatures in the mantle, it is suggested that diamond rains appear.
                     This process also appears on other giant planets.
                 </p>
-                <h3 class="paragraphsubheader" id="AtmosphereAndClimate">Atmosphere and climate</h3>
-                <p class="paragraph">
-                    Uranus has an atmosphere composed of mostly hydrogen and helium.
-                    There are trace amounts of other elements, like methane, which gives Uranus it's pale blue color.
-                    The Uranian atmosphere can be divided into the troposphere, the stratosphere and a hot thermosphere.
-                    Within the troposphere, methane clouds form at 1.2 bar; ammonia and hydrogen sulfide clouds between 3 and 10 bars, ammonium hydrosulfide clouds at 20-40 bars and water clouds at 50 bars and lower.
-                    Not much is known about the atmosphere and several proposals for a Uranus atmospheric probe were made.
-                </p>
-                <p class="paragraph">
-                    The atmosphere has little features - during its flyby, Voyager 2 saw only a few discrete clouds and some dark spots.
-                    More recent observations reveal that Uranus exhibits dynamic clouds when approaching equinox.
-                </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:303.5px;">
-                        <img class="articleimage" src="../assets/images/diagrams/uranus-rings.png" alt="Rings of Uranus" width="301.5" height="360">
+                    <div class="captionbox right" style="width:306.5px;">
+                        <img class="articleimage" src="../assets/images/diagrams/uranus-rings.png" alt="Rings of Uranus" width="304.5" height="360">
                         <p class="caption">Location of the rings of Uranus, its inner moons and Miranda</p>
                     </div>
+                    <h3 class="paragraphsubheader" id="AtmosphereAndClimate">Atmosphere and climate</h3>
+                    <p class="paragraph">
+                        Uranus has an atmosphere composed of mostly hydrogen and helium.
+                        There are trace amounts of other elements, like methane, which gives Uranus it's pale blue color.
+                        The Uranian atmosphere can be divided into the troposphere, the stratosphere and a hot thermosphere.
+                        Within the troposphere, methane clouds form at 1.2 bar; ammonia and hydrogen sulfide clouds between 3 and 10 bars, ammonium hydrosulfide clouds at 20-40 bars and water clouds at 50 bars and lower.
+                        Not much is known about the atmosphere and several proposals for a Uranus atmospheric probe were made.
+                    </p>
+                    <p class="paragraph">
+                        The atmosphere has little features - during its flyby, Voyager 2 saw only a few discrete clouds and some dark spots.
+                        More recent observations reveal that Uranus exhibits dynamic clouds when approaching equinox.
+                    </p>
                     <h3 class="paragraphsubheader" id="Rings">Rings</h3>
                     <p class="paragraph">
                         Uranus, like other giants, has a low-albedo ring system.
@@ -110,8 +112,8 @@ link: uranus
                 <h2 class="paragraphheader" id="Satellites">Satellites</h2>
                 <p class="readmore">Main article: <a href="satellites-of-uranus.html">Satellites of Uranus</a></p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:122px;">
-                        <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania" width="120" height="120">
+                    <div class="captionbox right" style="width:182px;">
+                        <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania" width="180" height="180">
                         <p class="caption">Titania, the biggest moon of Uranus</p>
                     </div>
                     <p class="paragraph">
